--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET_KEY=mysecretkey
-DATABASE_URL=postgres://iegsvbsz:zgAyx913hsk5kq04tuRfXl9_dE-GAq5C@salt.db.elephantsql.com/iegsvbsz
+DATABASE_URL=postgres://iegsbsz:zgAyx13hsk5kq04tfXl9_dE-GA5C@salt.db.elephantsql.com/iegsbsz
